<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".TipCalculatorActivity">

    <TextView
        android:id="@+id/checkAmountText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/check_amount"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/partySizeText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/party_size"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAmountText" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_total_price"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCompute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/checkAmountText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_group_size"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCompute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/partySizeText"
        app:layout_constraintTop_toBottomOf="@+id/checkAmountValue"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/TipsTotalsText"
        android:layout_width="360dp"
        android:layout_height="36dp"
        android:text="@string/tips_and_totals_per_person"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/twentyPercentTipText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
        app:layout_constraintVertical_bias="0.366" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/twentyPercentTotalText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_20"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipText"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/twentyfivePercentTipText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="84dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_25"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/twentyfivePercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/total"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalText"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipText"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/twentyfivePercentTotalText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_25"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipText"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/twentyPercentTipText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_20"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/tipText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/tip"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipText"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/fifteenPercentTipText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_15"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/fifteenPercentTotalText"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="none"
        android:text="@string/_15"
        android:textColor="#716F6F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipText"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/twentyfivePercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#353232"
        android:text="@string/compute_tip"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeText" />

</androidx.constraintlayout.widget.ConstraintLayout>